Added.gitattributes file to ignore large files in git Added pickle files and dataframes to gitignore and data folder Modified notebooks to use pickle files and dataframes and show cell outputs Updated README.md Added requirements.txt

--- a/notebooks/03-data-modelling.ipynb
+++ b/notebooks/03-data-modelling.ipynb
@@ -1,6 +1,59 @@
 {
  "cells": [
   {
+   "cell_type": "code",
+   "execution_count": 1,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import tweepy \n",
+    "import configparser\n",
+    "import requests     # For saving access tokens and for file management when creating and adding to the dataset\n",
+    "import os           # For dealing with json responses we receive from the API\n",
+    "import json         # For displaying the data after\n",
+    "import pandas as pd # For saving the response data in CSV format\n",
+    "import csv          # For parsing the dates received from twitter in readable formats\n",
+    "import datetime\n",
+    "import dateutil.parser\n",
+    "import unicodedata  #To add wait time between requests\n",
+    "import time\n",
+    "import sqlite3\n",
+    "import re\n",
+    "import twitter\n",
+    "import seaborn as sns\n",
+    "import matplotlib.pyplot as plt\n",
+    "from sklearn.metrics import silhouette_score\n",
+    "from bertopic import BERTopic\n",
+    "from bertopic.representation import KeyBERTInspired, MaximalMarginalRelevance,PartOfSpeech\n",
+    "from sentence_transformers import SentenceTransformer\n",
+    "from sklearn.feature_extraction.text import CountVectorizer\n",
+    "from umap import UMAP\n",
+    "from hdbscan import HDBSCAN\n",
+    "from nltk.corpus import stopwords\n",
+    "from sklearn.model_selection import RandomizedSearchCV\n",
+    "from flair.embeddings import TransformerDocumentEmbeddings\n",
+    "import numpy as np\n",
+    "from twitter import *\n",
+    "from functools import partial\n",
+    "from collections import Counter\n",
+    "import nltk\n",
+    "import string\n",
+    "from nltk.corpus import wordnet\n",
+    "from nltk.corpus import stopwords\n",
+    "from nltk.stem import WordNetLemmatizer\n",
+    "from nltk.stem.porter import PorterStemmer"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 2,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "df_tweets_preprocessed = pd.read_pickle('../data/df_tweets_preprocessed.pkl')"
+   ]
+  },
+  {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -50,9 +103,33 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "Some weights of the model checkpoint at roberta-base were not used when initializing RobertaModel: ['lm_head.layer_norm.bias', 'lm_head.dense.bias', 'lm_head.dense.weight', 'lm_head.layer_norm.weight', 'lm_head.bias']\n",
+      "- This IS expected if you are initializing RobertaModel from the checkpoint of a model trained on another task or with another architecture (e.g. initializing a BertForSequenceClassification model from a BertForPreTraining model).\n",
+      "- This IS NOT expected if you are initializing RobertaModel from the checkpoint of a model that you expect to be exactly identical (initializing a BertForSequenceClassification model from a BertForSequenceClassification model).\n",
+      "Some weights of RobertaModel were not initialized from the model checkpoint at roberta-base and are newly initialized: ['roberta.pooler.dense.weight', 'roberta.pooler.dense.bias']\n",
+      "You should probably TRAIN this model on a down-stream task to be able to use it for predictions and inference.\n",
+      "Batches: 100%|██████████| 1137/1137 [09:29<00:00,  2.00it/s]\n",
+      "2024-01-09 20:53:15,174 - BERTopic - Transformed documents to Embeddings\n",
+      "2024-01-09 20:54:30,962 - BERTopic - Reduced dimensionality\n",
+      "2024-01-09 20:54:48,333 - BERTopic - Clustered reduced embeddings\n",
+      "2024-01-09 20:55:19,552 - BERTopic - Reduced number of topics from 69 to 50\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "0.19616470366850333\n"
+     ]
+    }
+   ],
    "source": [
     "from sklearn.metrics import silhouette_score\n",
     "from bertopic import BERTopic\n",
@@ -68,7 +145,7 @@
     "from hdbscan import HDBSCAN\n",
     "import numpy as np\n",
     "\n",
-    "my_model = BERTopic.load(\"/content/drive/MyDrive/Colab_Notebooks/Data/twitter_bert_model\")\n",
+    "# my_model = BERTopic.load(\"/content/drive/MyDrive/Colab_Notebooks/Data/twitter_bert_model\")\n",
     "\n",
     "# Build the pipeline with the current parameter settings\n",
     "stopwords_list      = list(stopwords.words('english')) + ['http', 'https', 'amp', 'com', 'gtgtgt', 'please', 'send', 'dm']\n",
@@ -114,18 +191,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 4,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "c:\\Users\\kushl\\Anaconda3\\lib\\site-packages\\scipy\\sparse\\_index.py:146: SparseEfficiencyWarning: Changing the sparsity structure of a csr_matrix is expensive. lil_matrix is more efficient.\n",
+      "  self._set_arrayXarray(i, j, x)\n"
+     ]
+    }
+   ],
    "source": [
-    "# # Method 1 - safetensors\n",
-    "# model.save(\"/content/drive/MyDrive/Colab_Notebooks/My_Models/\", serialization=\"safetensors\", save_ctfidf=True, save_embedding_model=embedding_model)\n",
-    "\n",
-    "# # Method 2 - pytorch\n",
-    "# model.save(\"/content/drive/MyDrive/Colab_Notebooks/My_Models/\", serialization=\"pytorch\", save_ctfidf=True, save_embedding_model=embedding_model)\n",
-    "\n",
     "# # Method 3 - pickle\n",
-    "# model.save(\"/content/drive/MyDrive/Colab_Notebooks/My_Models/twitter_bert_model\", serialization=\"pickle\")"
+    "model.save(\"../model/localBERT\", serialization=\"pickle\")"
    ]
   }
  ],
